--- a/property_sales/templates/property_sales/index.html
+++ b/property_sales/templates/property_sales/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    List of pages
+    <h1>Pages</h1>
+    <div>
+        <ul>
+            {% for page in page_count %}
+            <li><a href="{% url 'property_sales:populate_sales_record' page %}">Page {{ page }}</a></li>
+            {% endfor %}
+        </ul>
+    </div>
 </body>
 </html>
